Settings: show placeholder text in search field for the add language dialog

Bug: 705359
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I267391af9bc7bab6fa3c9e5e86f326534ac6ae93
Reviewed-on: https://chromium-review.googlesource.com/1022371
Reviewed-by: Hector Carmona <hcarmona@chromium.org>
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552465}
Former-commit-id: fef3dbbb4c0213c37259b9d6a07e2363ebe6a005